# youtube-transcribe

./: Makefile  README.md  pyproject.toml
src/: exceptions.py  fetchers.py  main.py  parsers.py  processors.py  utils.py
