[tool.poetry]
name = "youtubevideo-parser"
version = "0.1.0"
description = ""
authors = ["bellabe <bella.belgarokova@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
